@@ -13,6 +13,8 @@ Bugs fixed in 3.09.01
 [1757110] Toolbar now correctly disables images according to type of entry
 selected and if URL is populated
 [1758025, 1759364] '-s' option now works correctly
+[] Window's position and size now updated correctly
+[1768822] Manage->Options->Password History 'apply' works again.
 
 New Features for 3.09.01
 =======================-
